security: harden conversational memory isolation